# Django_diplom_skillbox

./: Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml  requirements.txt
megano/: requirements.txt
megano/auth_app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
megano/auth_app/migrations/: 0001_initial.py  0002_profile.py  0003_profile_email_alter_profile_avatar_delete_avatar.py  0004_alter_profile_options.py
megano/megano/: settings.py  urls.py
megano/my_auth/: models.py  serializers.py  views.py
megano/my_auth/migrations/: 0001_initial.py  0002_profile.py
megano/orders_app/: admin.py  cart.py  models.py  serializers.py  urls.py  views.py
megano/orders_app/migrations/: 0001_initial.py  0002_orderproduct.py  0003_order_products.py
megano/products_app/: admin.py  apps.py  filters.py  models.py  paginations.py  serializers.py  urls.py  views.py
megano/products_app/migrations/: 0001_initial.py  0002_remove_product_reviews_review_product.py  0003_category.py  0004_alter_product_category.py  0005_product_datefrom_product_dateto.py  0006_rename_specifications_product_specification.py  0007_category_parent.py  0008_alter_productimage_src.py  0009_alter_productimage_alt_alter_productimage_product_and_more.py  0010_remove_review_author_remove_review_email_review_user_and_more.py
